tests/neg/lexer_unclosed_char.baa
// RUN: expect-fail
// EXPECT: متوقع إغلاق الحرف الحرفي

صحيح الرئيسية() {
    حرف ح = 'أ.
    إرجع ٠.
}
